--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@ body {
 }
 
 .hometrip {
-    padding: 50px;
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .innertrip {
