--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background: url(images/background.jpg);
     background-attachment: fixed;
     background-repeat: repeat;
+    font-family: 'Lato', sans-serif;
 }
 
 .tripscontainer {
@@ -13,9 +14,9 @@ body {
     margin-top: 15px;
     height: 100%;
     border-radius: 15px;
-    padding:30px;
-    padding-bottom:50px;
-    padding-top:50px;
+    padding: 30px;
+    padding-bottom: 50px;
+    padding-top: 50px;
     opacity: 1;
     transition: all linear 0.5s;
 }
@@ -31,6 +32,7 @@ body {
 .trips:nth-child(even) {
     background: #CCC
 }
+
 .trips:nth-child(odd) {
     background: #FFF
 }
@@ -40,22 +42,63 @@ body {
 }
 
 .loader {
+    border-style: solid;
     border-radius: 15px;
+    border-width: 2px;
+    border-color: #05F;
     margin-top: 10px;
     padding-top: 100px;
     padding-bottom: 100px;
-    background-color: #FFF;
+    background: url(images/sand2.png);
     transition: all linear 0.5s;
 }
 
-/*.loader.ng-leave {
-    opacity: 0;
-}*/
+.navbar-sandtheme {
+    background: url(images/sand2.png);
+    box-shadow: 0 0 10px #0028;
+    transition: all linear 0.2s;
+}
 
-.loader > img {
-    margin: auto;
-    display: block;
-    max-width: 400px;
+.navbar-sandtheme:hover {
+    box-shadow: 0 0 20px #00F;
+}
+
+.navbar-sandtheme .navbar-brand {
+    font-size: large;
+    text-shadow: -1px 0 #05F, 0 1px #05F, 1px 0 #05F, 0 -1px #05F;
+    /*font-weight: bold;*/
+}
+
+.navbar-sandtheme a {
+    /*color: black !important;*/
+}
+
+.home-carousel {
+    margin-top: 25px;
+    padding: 20px;
+}
+
+.carousel {
+    border-radius: 25px;
+    border-color: blue;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 25px;
+    overflow: hidden;
+}
+
+.carousel-caption p {
+    color: gray;
+    font-size: x-large;
+    text-shadow: -1px 0 #05F, 0 1px #05F, 1px 0 #05F, 0 -1px #05F;
+}
+
+.carousel .carousel-control {
+    visibility: hidden;
+}
+
+.carousel:hover .carousel-control {
+    visibility: visible;
 }
 
 .hometrip {
@@ -80,7 +123,7 @@ body {
 
 .tripcontent {
     border-radius: 15px;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     height: 100%;
     padding: 10px;
 }
@@ -92,10 +135,12 @@ body {
 .uib-datepicker-popup.dropdown-menu .btn-info {
     font-weight: bold;
 }
-.uib-datepicker-popup.dropdown-menu .btn:enabled:not(.uib-left):not(.uib-title):not(.uib-right)  {
+
+.uib-datepicker-popup.dropdown-menu .btn:enabled:not(.uib-left):not(.uib-title):not(.uib-right) {
     background-color: #55AAFFFF;
     font-weight: bold;
 }
+
 
 /*.vcenter {
     display: flex;
