--- a/style.css
+++ b/style.css
@@ -4,28 +4,70 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+.ui-view-container {
+  position: relative;
+  height: 65px;
+}
+
+[ui-view].ng-enter, [ui-view].ng-leave {
+  position: absolute;
+  left: 0;
+  right: 0;
+  -webkit-transition:all .5s ease-in-out;
+    -moz-transition:all .5s ease-in-out;
+    -o-transition:all .5s ease-in-out;
+    transition:all .5s ease-in-out;
+}
+
+[ui-view].ng-enter {
+  opacity: 0;
+  -webkit-transform:scale3d(0.5, 0.5, 0.5);
+  -moz-transform:scale3d(0.5, 0.5, 0.5);
+  transform:scale3d(0.5, 0.5, 0.5);
+}
+
+[ui-view].ng-enter-active {
+  opacity: 1;
+  -webkit-transform:scale3d(1, 1, 1);
+  -moz-transform:scale3d(1, 1, 1);
+  transform:scale3d(1, 1, 1);
+}
+
+[ui-view].ng-leave {
+  opacity: 1; 
+  -webkit-transform:translate3d(0, 0, 0);
+  -moz-transform:translate3d(0, 0, 0);
+  transform:translate3d(0, 0, 0);
+}
+
+[ui-view].ng-leave-active {
+  opacity: 0;
+  -webkit-transform:translate3d(100px, 0, 0);
+  -moz-transform:translate3d(100px, 0, 0);
+  transform:translate3d(100px, 0, 0);
+}
+
 .tripscontainer {
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
-.trips {
+.trips, .tripdet {
     margin-top: 15px;
     height: 100%;
     border-radius: 15px;
     padding: 30px;
     padding-bottom: 50px;
     padding-top: 50px;
-    opacity: 1;
+}
+
+.tripdet {
+    background-color: #FFF;
+}
+
+.trips:hover, .tripdet:hover {
     transition: all linear 0.5s;
-}
-
-.trips:hover {
     box-shadow: 0 0 10px #05F;
-}
-
-.trips.ng-enter {
-    opacity: 0;
 }
 
 .trips:nth-child(even) {
@@ -48,12 +90,11 @@ body {
     margin-top: 10px;
     padding-top: 100px;
     padding-bottom: 100px;
-    background: url(images/sand2.png);
-    transition: all linear 0.5s;
+    background-image: url(images/sand2.png);
 }
 
 .navbar-sandtheme {
-    background: url(images/sand2.png);
+    background-image: url(images/sand2.png);
     box-shadow: 0 0 10px #0028;
     transition: all linear 0.2s;
 }
@@ -113,7 +154,6 @@ body {
     border-radius: 25px;
     padding: 20px;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: center center;
     height: 300px;
     transition: all linear 0.3s;
